@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLBINORMAL3BEXTPROC {
 
-    void apply(byte x0, byte x1, byte x2);
-    static MemoryAddress allocate(PFNGLBINORMAL3BEXTPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLBINORMAL3BEXTPROC.class, fi, constants$527.PFNGLBINORMAL3BEXTPROC$FUNC, "(BBB)V");
+    void apply(byte bx, byte by, byte bz);
+    static MemorySegment allocate(PFNGLBINORMAL3BEXTPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLBINORMAL3BEXTPROC.class, fi, constants$527.PFNGLBINORMAL3BEXTPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLBINORMAL3BEXTPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLBINORMAL3BEXTPROC.class, fi, constants$527.PFNGLBINORMAL3BEXTPROC$FUNC, "(BBB)V", scope);
-    }
-    static PFNGLBINORMAL3BEXTPROC ofAddress(MemoryAddress addr) {
-        return (byte x0, byte x1, byte x2) -> {
+    static PFNGLBINORMAL3BEXTPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (byte _bx, byte _by, byte _bz) -> {
             try {
-                constants$527.PFNGLBINORMAL3BEXTPROC$MH.invokeExact((Addressable)addr, x0, x1, x2);
+                constants$527.PFNGLBINORMAL3BEXTPROC$MH.invokeExact((Addressable)symbol, _bx, _by, _bz);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
