@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLDELETEFRAMEBUFFERSEXTPROC {
 
-    void apply(int x0, jdk.incubator.foreign.MemoryAddress x1);
-    static MemoryAddress allocate(PFNGLDELETEFRAMEBUFFERSEXTPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLDELETEFRAMEBUFFERSEXTPROC.class, fi, constants$628.PFNGLDELETEFRAMEBUFFERSEXTPROC$FUNC, "(ILjdk/incubator/foreign/MemoryAddress;)V");
+    void apply(int n, java.lang.foreign.MemoryAddress framebuffers);
+    static MemorySegment allocate(PFNGLDELETEFRAMEBUFFERSEXTPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLDELETEFRAMEBUFFERSEXTPROC.class, fi, constants$628.PFNGLDELETEFRAMEBUFFERSEXTPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLDELETEFRAMEBUFFERSEXTPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLDELETEFRAMEBUFFERSEXTPROC.class, fi, constants$628.PFNGLDELETEFRAMEBUFFERSEXTPROC$FUNC, "(ILjdk/incubator/foreign/MemoryAddress;)V", scope);
-    }
-    static PFNGLDELETEFRAMEBUFFERSEXTPROC ofAddress(MemoryAddress addr) {
-        return (int x0, jdk.incubator.foreign.MemoryAddress x1) -> {
+    static PFNGLDELETEFRAMEBUFFERSEXTPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (int _n, java.lang.foreign.MemoryAddress _framebuffers) -> {
             try {
-                constants$628.PFNGLDELETEFRAMEBUFFERSEXTPROC$MH.invokeExact((Addressable)addr, x0, x1);
+                constants$628.PFNGLDELETEFRAMEBUFFERSEXTPROC$MH.invokeExact((Addressable)symbol, _n, (java.lang.foreign.Addressable)_framebuffers);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
