@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLGENERATETEXTUREMIPMAPEXTPROC {
 
-    void apply(int x0, int x1);
-    static MemoryAddress allocate(PFNGLGENERATETEXTUREMIPMAPEXTPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLGENERATETEXTUREMIPMAPEXTPROC.class, fi, constants$597.PFNGLGENERATETEXTUREMIPMAPEXTPROC$FUNC, "(II)V");
+    void apply(int texture, int target);
+    static MemorySegment allocate(PFNGLGENERATETEXTUREMIPMAPEXTPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLGENERATETEXTUREMIPMAPEXTPROC.class, fi, constants$597.PFNGLGENERATETEXTUREMIPMAPEXTPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLGENERATETEXTUREMIPMAPEXTPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLGENERATETEXTUREMIPMAPEXTPROC.class, fi, constants$597.PFNGLGENERATETEXTUREMIPMAPEXTPROC$FUNC, "(II)V", scope);
-    }
-    static PFNGLGENERATETEXTUREMIPMAPEXTPROC ofAddress(MemoryAddress addr) {
-        return (int x0, int x1) -> {
+    static PFNGLGENERATETEXTUREMIPMAPEXTPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (int _texture, int _target) -> {
             try {
-                constants$597.PFNGLGENERATETEXTUREMIPMAPEXTPROC$MH.invokeExact((Addressable)addr, x0, x1);
+                constants$597.PFNGLGENERATETEXTUREMIPMAPEXTPROC$MH.invokeExact((Addressable)symbol, _texture, _target);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
