@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLGETNPIXELMAPFVPROC {
 
-    void apply(int x0, int x1, jdk.incubator.foreign.MemoryAddress x2);
-    static MemoryAddress allocate(PFNGLGETNPIXELMAPFVPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLGETNPIXELMAPFVPROC.class, fi, constants$307.PFNGLGETNPIXELMAPFVPROC$FUNC, "(IILjdk/incubator/foreign/MemoryAddress;)V");
+    void apply(int map, int bufSize, java.lang.foreign.MemoryAddress values);
+    static MemorySegment allocate(PFNGLGETNPIXELMAPFVPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLGETNPIXELMAPFVPROC.class, fi, constants$307.PFNGLGETNPIXELMAPFVPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLGETNPIXELMAPFVPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLGETNPIXELMAPFVPROC.class, fi, constants$307.PFNGLGETNPIXELMAPFVPROC$FUNC, "(IILjdk/incubator/foreign/MemoryAddress;)V", scope);
-    }
-    static PFNGLGETNPIXELMAPFVPROC ofAddress(MemoryAddress addr) {
-        return (int x0, int x1, jdk.incubator.foreign.MemoryAddress x2) -> {
+    static PFNGLGETNPIXELMAPFVPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (int _map, int _bufSize, java.lang.foreign.MemoryAddress _values) -> {
             try {
-                constants$307.PFNGLGETNPIXELMAPFVPROC$MH.invokeExact((Addressable)addr, x0, x1, x2);
+                constants$307.PFNGLGETNPIXELMAPFVPROC$MH.invokeExact((Addressable)symbol, _map, _bufSize, (java.lang.foreign.Addressable)_values);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
