@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLGETNPOLYGONSTIPPLEPROC {
 
-    void apply(int x0, jdk.incubator.foreign.MemoryAddress x1);
-    static MemoryAddress allocate(PFNGLGETNPOLYGONSTIPPLEPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLGETNPOLYGONSTIPPLEPROC.class, fi, constants$308.PFNGLGETNPOLYGONSTIPPLEPROC$FUNC, "(ILjdk/incubator/foreign/MemoryAddress;)V");
+    void apply(int bufSize, java.lang.foreign.MemoryAddress pattern);
+    static MemorySegment allocate(PFNGLGETNPOLYGONSTIPPLEPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLGETNPOLYGONSTIPPLEPROC.class, fi, constants$308.PFNGLGETNPOLYGONSTIPPLEPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLGETNPOLYGONSTIPPLEPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLGETNPOLYGONSTIPPLEPROC.class, fi, constants$308.PFNGLGETNPOLYGONSTIPPLEPROC$FUNC, "(ILjdk/incubator/foreign/MemoryAddress;)V", scope);
-    }
-    static PFNGLGETNPOLYGONSTIPPLEPROC ofAddress(MemoryAddress addr) {
-        return (int x0, jdk.incubator.foreign.MemoryAddress x1) -> {
+    static PFNGLGETNPOLYGONSTIPPLEPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (int _bufSize, java.lang.foreign.MemoryAddress _pattern) -> {
             try {
-                constants$308.PFNGLGETNPOLYGONSTIPPLEPROC$MH.invokeExact((Addressable)addr, x0, x1);
+                constants$308.PFNGLGETNPOLYGONSTIPPLEPROC$MH.invokeExact((Addressable)symbol, _bufSize, (java.lang.foreign.Addressable)_pattern);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
