@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC {
 
-    void apply(int x0, int x1, jdk.incubator.foreign.MemoryAddress x2, int x3, int x4, int x5);
-    static MemoryAddress allocate(PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC.class, fi, constants$725.PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC$FUNC, "(IILjdk/incubator/foreign/MemoryAddress;III)V");
+    void apply(int mode, int type, java.lang.foreign.MemoryAddress indirect, int drawCount, int stride, int vertexBufferCount);
+    static MemorySegment allocate(PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC.class, fi, constants$725.PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC.class, fi, constants$725.PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC$FUNC, "(IILjdk/incubator/foreign/MemoryAddress;III)V", scope);
-    }
-    static PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC ofAddress(MemoryAddress addr) {
-        return (int x0, int x1, jdk.incubator.foreign.MemoryAddress x2, int x3, int x4, int x5) -> {
+    static PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (int _mode, int _type, java.lang.foreign.MemoryAddress _indirect, int _drawCount, int _stride, int _vertexBufferCount) -> {
             try {
-                constants$725.PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC$MH.invokeExact((Addressable)addr, x0, x1, x2, x3, x4, x5);
+                constants$725.PFNGLMULTIDRAWELEMENTSINDIRECTBINDLESSNVPROC$MH.invokeExact((Addressable)symbol, _mode, _type, (java.lang.foreign.Addressable)_indirect, _drawCount, _stride, _vertexBufferCount);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
