@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLMULTITEXCOORD2XVOESPROC {
 
-    void apply(int x0, jdk.incubator.foreign.MemoryAddress x1);
-    static MemoryAddress allocate(PFNGLMULTITEXCOORD2XVOESPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLMULTITEXCOORD2XVOESPROC.class, fi, constants$436.PFNGLMULTITEXCOORD2XVOESPROC$FUNC, "(ILjdk/incubator/foreign/MemoryAddress;)V");
+    void apply(int texture, java.lang.foreign.MemoryAddress coords);
+    static MemorySegment allocate(PFNGLMULTITEXCOORD2XVOESPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLMULTITEXCOORD2XVOESPROC.class, fi, constants$436.PFNGLMULTITEXCOORD2XVOESPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLMULTITEXCOORD2XVOESPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLMULTITEXCOORD2XVOESPROC.class, fi, constants$436.PFNGLMULTITEXCOORD2XVOESPROC$FUNC, "(ILjdk/incubator/foreign/MemoryAddress;)V", scope);
-    }
-    static PFNGLMULTITEXCOORD2XVOESPROC ofAddress(MemoryAddress addr) {
-        return (int x0, jdk.incubator.foreign.MemoryAddress x1) -> {
+    static PFNGLMULTITEXCOORD2XVOESPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (int _texture, java.lang.foreign.MemoryAddress _coords) -> {
             try {
-                constants$436.PFNGLMULTITEXCOORD2XVOESPROC$MH.invokeExact((Addressable)addr, x0, x1);
+                constants$436.PFNGLMULTITEXCOORD2XVOESPROC$MH.invokeExact((Addressable)symbol, _texture, (java.lang.foreign.Addressable)_coords);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
