@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLPROGRAMUNIFORM1IPROC {
 
-    void apply(int x0, int x1, int x2);
-    static MemoryAddress allocate(PFNGLPROGRAMUNIFORM1IPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLPROGRAMUNIFORM1IPROC.class, fi, constants$224.PFNGLPROGRAMUNIFORM1IPROC$FUNC, "(III)V");
+    void apply(int program, int location, int v0);
+    static MemorySegment allocate(PFNGLPROGRAMUNIFORM1IPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLPROGRAMUNIFORM1IPROC.class, fi, constants$224.PFNGLPROGRAMUNIFORM1IPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLPROGRAMUNIFORM1IPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLPROGRAMUNIFORM1IPROC.class, fi, constants$224.PFNGLPROGRAMUNIFORM1IPROC$FUNC, "(III)V", scope);
-    }
-    static PFNGLPROGRAMUNIFORM1IPROC ofAddress(MemoryAddress addr) {
-        return (int x0, int x1, int x2) -> {
+    static PFNGLPROGRAMUNIFORM1IPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (int _program, int _location, int _v0) -> {
             try {
-                constants$224.PFNGLPROGRAMUNIFORM1IPROC$MH.invokeExact((Addressable)addr, x0, x1, x2);
+                constants$224.PFNGLPROGRAMUNIFORM1IPROC$MH.invokeExact((Addressable)symbol, _program, _location, _v0);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
