@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC {
 
-    void apply(int x0, int x1, int x2, int x3, int x4);
-    static MemoryAddress allocate(PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC.class, fi, constants$171.PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC$FUNC, "(IIIII)V");
+    void apply(int target, int samples, int internalformat, int width, int height);
+    static MemorySegment allocate(PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC.class, fi, constants$171.PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC.class, fi, constants$171.PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC$FUNC, "(IIIII)V", scope);
-    }
-    static PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC ofAddress(MemoryAddress addr) {
-        return (int x0, int x1, int x2, int x3, int x4) -> {
+    static PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (int _target, int _samples, int _internalformat, int _width, int _height) -> {
             try {
-                constants$171.PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC$MH.invokeExact((Addressable)addr, x0, x1, x2, x3, x4);
+                constants$171.PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC$MH.invokeExact((Addressable)symbol, _target, _samples, _internalformat, _width, _height);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
