@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLSETLOCALCONSTANTEXTPROC {
 
-    void apply(int x0, int x1, jdk.incubator.foreign.MemoryAddress x2);
-    static MemoryAddress allocate(PFNGLSETLOCALCONSTANTEXTPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLSETLOCALCONSTANTEXTPROC.class, fi, constants$686.PFNGLSETLOCALCONSTANTEXTPROC$FUNC, "(IILjdk/incubator/foreign/MemoryAddress;)V");
+    void apply(int id, int type, java.lang.foreign.MemoryAddress addr);
+    static MemorySegment allocate(PFNGLSETLOCALCONSTANTEXTPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLSETLOCALCONSTANTEXTPROC.class, fi, constants$686.PFNGLSETLOCALCONSTANTEXTPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLSETLOCALCONSTANTEXTPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLSETLOCALCONSTANTEXTPROC.class, fi, constants$686.PFNGLSETLOCALCONSTANTEXTPROC$FUNC, "(IILjdk/incubator/foreign/MemoryAddress;)V", scope);
-    }
-    static PFNGLSETLOCALCONSTANTEXTPROC ofAddress(MemoryAddress addr) {
-        return (int x0, int x1, jdk.incubator.foreign.MemoryAddress x2) -> {
+    static PFNGLSETLOCALCONSTANTEXTPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (int _id, int _type, java.lang.foreign.MemoryAddress _addr) -> {
             try {
-                constants$686.PFNGLSETLOCALCONSTANTEXTPROC$MH.invokeExact((Addressable)addr, x0, x1, x2);
+                constants$686.PFNGLSETLOCALCONSTANTEXTPROC$MH.invokeExact((Addressable)symbol, _id, _type, (java.lang.foreign.Addressable)_addr);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
