@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLTEXTUREBARRIERNVPROC {
 
     void apply();
-    static MemoryAddress allocate(PFNGLTEXTUREBARRIERNVPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLTEXTUREBARRIERNVPROC.class, fi, constants$826.PFNGLTEXTUREBARRIERNVPROC$FUNC, "()V");
+    static MemorySegment allocate(PFNGLTEXTUREBARRIERNVPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLTEXTUREBARRIERNVPROC.class, fi, constants$826.PFNGLTEXTUREBARRIERNVPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLTEXTUREBARRIERNVPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLTEXTUREBARRIERNVPROC.class, fi, constants$826.PFNGLTEXTUREBARRIERNVPROC$FUNC, "()V", scope);
-    }
-    static PFNGLTEXTUREBARRIERNVPROC ofAddress(MemoryAddress addr) {
+    static PFNGLTEXTUREBARRIERNVPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
         return () -> {
             try {
-                constants$826.PFNGLTEXTUREBARRIERNVPROC$MH.invokeExact((Addressable)addr);
+                constants$826.PFNGLTEXTUREBARRIERNVPROC$MH.invokeExact((Addressable)symbol);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
