@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLTEXTUREPARAMETERIPROC {
 
-    void apply(int x0, int x1, int x2);
-    static MemoryAddress allocate(PFNGLTEXTUREPARAMETERIPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLTEXTUREPARAMETERIPROC.class, fi, constants$291.PFNGLTEXTUREPARAMETERIPROC$FUNC, "(III)V");
+    void apply(int texture, int pname, int param);
+    static MemorySegment allocate(PFNGLTEXTUREPARAMETERIPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLTEXTUREPARAMETERIPROC.class, fi, constants$291.PFNGLTEXTUREPARAMETERIPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLTEXTUREPARAMETERIPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLTEXTUREPARAMETERIPROC.class, fi, constants$291.PFNGLTEXTUREPARAMETERIPROC$FUNC, "(III)V", scope);
-    }
-    static PFNGLTEXTUREPARAMETERIPROC ofAddress(MemoryAddress addr) {
-        return (int x0, int x1, int x2) -> {
+    static PFNGLTEXTUREPARAMETERIPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (int _texture, int _pname, int _param) -> {
             try {
-                constants$291.PFNGLTEXTUREPARAMETERIPROC$MH.invokeExact((Addressable)addr, x0, x1, x2);
+                constants$291.PFNGLTEXTUREPARAMETERIPROC$MH.invokeExact((Addressable)symbol, _texture, _pname, _param);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
