@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLVERTEXATTRIBI4UIEXTPROC {
 
-    void apply(int x0, int x1, int x2, int x3, int x4);
-    static MemoryAddress allocate(PFNGLVERTEXATTRIBI4UIEXTPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLVERTEXATTRIBI4UIEXTPROC.class, fi, constants$873.PFNGLVERTEXATTRIBI4UIEXTPROC$FUNC, "(IIIII)V");
+    void apply(int index, int x, int y, int z, int w);
+    static MemorySegment allocate(PFNGLVERTEXATTRIBI4UIEXTPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLVERTEXATTRIBI4UIEXTPROC.class, fi, constants$873.PFNGLVERTEXATTRIBI4UIEXTPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLVERTEXATTRIBI4UIEXTPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLVERTEXATTRIBI4UIEXTPROC.class, fi, constants$873.PFNGLVERTEXATTRIBI4UIEXTPROC$FUNC, "(IIIII)V", scope);
-    }
-    static PFNGLVERTEXATTRIBI4UIEXTPROC ofAddress(MemoryAddress addr) {
-        return (int x0, int x1, int x2, int x3, int x4) -> {
+    static PFNGLVERTEXATTRIBI4UIEXTPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (int _index, int _x, int _y, int _z, int _w) -> {
             try {
-                constants$873.PFNGLVERTEXATTRIBI4UIEXTPROC$MH.invokeExact((Addressable)addr, x0, x1, x2, x3, x4);
+                constants$873.PFNGLVERTEXATTRIBI4UIEXTPROC$MH.invokeExact((Addressable)symbol, _index, _x, _y, _z, _w);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
