@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLVERTEXATTRIBL1DEXTPROC {
 
-    void apply(int x0, double x1);
-    static MemoryAddress allocate(PFNGLVERTEXATTRIBL1DEXTPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLVERTEXATTRIBL1DEXTPROC.class, fi, constants$678.PFNGLVERTEXATTRIBL1DEXTPROC$FUNC, "(ID)V");
+    void apply(int index, double x);
+    static MemorySegment allocate(PFNGLVERTEXATTRIBL1DEXTPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLVERTEXATTRIBL1DEXTPROC.class, fi, constants$678.PFNGLVERTEXATTRIBL1DEXTPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLVERTEXATTRIBL1DEXTPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLVERTEXATTRIBL1DEXTPROC.class, fi, constants$678.PFNGLVERTEXATTRIBL1DEXTPROC$FUNC, "(ID)V", scope);
-    }
-    static PFNGLVERTEXATTRIBL1DEXTPROC ofAddress(MemoryAddress addr) {
-        return (int x0, double x1) -> {
+    static PFNGLVERTEXATTRIBL1DEXTPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (int _index, double _x) -> {
             try {
-                constants$678.PFNGLVERTEXATTRIBL1DEXTPROC$MH.invokeExact((Addressable)addr, x0, x1);
+                constants$678.PFNGLVERTEXATTRIBL1DEXTPROC$MH.invokeExact((Addressable)symbol, _index, _x);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
