@@ -2,22 +2,22 @@
 
 package opengl.ubuntu.v20;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public interface PFNGLVERTEXWEIGHTFVEXTPROC {
 
-    void apply(jdk.incubator.foreign.MemoryAddress x0);
-    static MemoryAddress allocate(PFNGLVERTEXWEIGHTFVEXTPROC fi) {
-        return RuntimeHelper.upcallStub(PFNGLVERTEXWEIGHTFVEXTPROC.class, fi, constants$696.PFNGLVERTEXWEIGHTFVEXTPROC$FUNC, "(Ljdk/incubator/foreign/MemoryAddress;)V");
+    void apply(java.lang.foreign.MemoryAddress weight);
+    static MemorySegment allocate(PFNGLVERTEXWEIGHTFVEXTPROC fi, MemorySession session) {
+        return RuntimeHelper.upcallStub(PFNGLVERTEXWEIGHTFVEXTPROC.class, fi, constants$696.PFNGLVERTEXWEIGHTFVEXTPROC$FUNC, session);
     }
-    static MemoryAddress allocate(PFNGLVERTEXWEIGHTFVEXTPROC fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(PFNGLVERTEXWEIGHTFVEXTPROC.class, fi, constants$696.PFNGLVERTEXWEIGHTFVEXTPROC$FUNC, "(Ljdk/incubator/foreign/MemoryAddress;)V", scope);
-    }
-    static PFNGLVERTEXWEIGHTFVEXTPROC ofAddress(MemoryAddress addr) {
-        return (jdk.incubator.foreign.MemoryAddress x0) -> {
+    static PFNGLVERTEXWEIGHTFVEXTPROC ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (java.lang.foreign.MemoryAddress _weight) -> {
             try {
-                constants$696.PFNGLVERTEXWEIGHTFVEXTPROC$MH.invokeExact((Addressable)addr, x0);
+                constants$696.PFNGLVERTEXWEIGHTFVEXTPROC$MH.invokeExact((Addressable)symbol, (java.lang.foreign.Addressable)_weight);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
