@@ -2,36 +2,34 @@
 
 package opengl.ubuntu.v20;
 
-import static jdk.incubator.foreign.CLinker.C_INT;
-import static jdk.incubator.foreign.CLinker.C_POINTER;
 import java.lang.invoke.MethodHandle;
-import jdk.incubator.foreign.FunctionDescriptor;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$442 {
 
     static final FunctionDescriptor PFNGLRECTXOESPROC$FUNC = FunctionDescriptor.ofVoid(
-        C_INT,
-        C_INT,
-        C_INT,
-        C_INT
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT
     );
     static final MethodHandle PFNGLRECTXOESPROC$MH = RuntimeHelper.downcallHandle(
-        "(IIII)V",
-        constants$442.PFNGLRECTXOESPROC$FUNC, false
+        constants$442.PFNGLRECTXOESPROC$FUNC
     );
     static final FunctionDescriptor PFNGLRECTXVOESPROC$FUNC = FunctionDescriptor.ofVoid(
-        C_POINTER,
-        C_POINTER
+        Constants$root.C_POINTER$LAYOUT,
+        Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle PFNGLRECTXVOESPROC$MH = RuntimeHelper.downcallHandle(
-        "(Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;)V",
-        constants$442.PFNGLRECTXVOESPROC$FUNC, false
+        constants$442.PFNGLRECTXVOESPROC$FUNC
     );
     static final FunctionDescriptor PFNGLTEXCOORD1XOESPROC$FUNC = FunctionDescriptor.ofVoid(
-        C_INT
+        Constants$root.C_INT$LAYOUT
     );
     static final MethodHandle PFNGLTEXCOORD1XOESPROC$MH = RuntimeHelper.downcallHandle(
-        "(I)V",
-        constants$442.PFNGLTEXCOORD1XOESPROC$FUNC, false
+        constants$442.PFNGLTEXCOORD1XOESPROC$FUNC
     );
 }
 
