@@ -2,48 +2,47 @@
 
 package opengl.ubuntu.v20;
 
-import static jdk.incubator.foreign.CLinker.C_INT;
 import java.lang.invoke.MethodHandle;
-import jdk.incubator.foreign.FunctionDescriptor;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$491 {
 
     static final FunctionDescriptor PFNGLSAMPLEMAPATIPROC$FUNC = FunctionDescriptor.ofVoid(
-        C_INT,
-        C_INT,
-        C_INT
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT
     );
     static final MethodHandle PFNGLSAMPLEMAPATIPROC$MH = RuntimeHelper.downcallHandle(
-        "(III)V",
-        constants$491.PFNGLSAMPLEMAPATIPROC$FUNC, false
+        constants$491.PFNGLSAMPLEMAPATIPROC$FUNC
     );
     static final FunctionDescriptor PFNGLCOLORFRAGMENTOP1ATIPROC$FUNC = FunctionDescriptor.ofVoid(
-        C_INT,
-        C_INT,
-        C_INT,
-        C_INT,
-        C_INT,
-        C_INT,
-        C_INT
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT
     );
     static final MethodHandle PFNGLCOLORFRAGMENTOP1ATIPROC$MH = RuntimeHelper.downcallHandle(
-        "(IIIIIII)V",
-        constants$491.PFNGLCOLORFRAGMENTOP1ATIPROC$FUNC, false
+        constants$491.PFNGLCOLORFRAGMENTOP1ATIPROC$FUNC
     );
     static final FunctionDescriptor PFNGLCOLORFRAGMENTOP2ATIPROC$FUNC = FunctionDescriptor.ofVoid(
-        C_INT,
-        C_INT,
-        C_INT,
-        C_INT,
-        C_INT,
-        C_INT,
-        C_INT,
-        C_INT,
-        C_INT,
-        C_INT
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_INT$LAYOUT
     );
     static final MethodHandle PFNGLCOLORFRAGMENTOP2ATIPROC$MH = RuntimeHelper.downcallHandle(
-        "(IIIIIIIIII)V",
-        constants$491.PFNGLCOLORFRAGMENTOP2ATIPROC$FUNC, false
+        constants$491.PFNGLCOLORFRAGMENTOP2ATIPROC$FUNC
     );
 }
 
