@@ -2,34 +2,31 @@
 
 package opengl.ubuntu.v20;
 
-import static jdk.incubator.foreign.CLinker.C_INT;
-import static jdk.incubator.foreign.CLinker.C_POINTER;
-import static jdk.incubator.foreign.CLinker.C_SHORT;
 import java.lang.invoke.MethodHandle;
-import jdk.incubator.foreign.FunctionDescriptor;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$773 {
 
     static final FunctionDescriptor PFNGLMULTITEXCOORD4HVNVPROC$FUNC = FunctionDescriptor.ofVoid(
-        C_INT,
-        C_POINTER
+        Constants$root.C_INT$LAYOUT,
+        Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle PFNGLMULTITEXCOORD4HVNVPROC$MH = RuntimeHelper.downcallHandle(
-        "(ILjdk/incubator/foreign/MemoryAddress;)V",
-        constants$773.PFNGLMULTITEXCOORD4HVNVPROC$FUNC, false
+        constants$773.PFNGLMULTITEXCOORD4HVNVPROC$FUNC
     );
     static final FunctionDescriptor PFNGLFOGCOORDHNVPROC$FUNC = FunctionDescriptor.ofVoid(
-        C_SHORT
+        Constants$root.C_SHORT$LAYOUT
     );
     static final MethodHandle PFNGLFOGCOORDHNVPROC$MH = RuntimeHelper.downcallHandle(
-        "(S)V",
-        constants$773.PFNGLFOGCOORDHNVPROC$FUNC, false
+        constants$773.PFNGLFOGCOORDHNVPROC$FUNC
     );
     static final FunctionDescriptor PFNGLFOGCOORDHVNVPROC$FUNC = FunctionDescriptor.ofVoid(
-        C_POINTER
+        Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle PFNGLFOGCOORDHVNVPROC$MH = RuntimeHelper.downcallHandle(
-        "(Ljdk/incubator/foreign/MemoryAddress;)V",
-        constants$773.PFNGLFOGCOORDHVNVPROC$FUNC, false
+        constants$773.PFNGLFOGCOORDHVNVPROC$FUNC
     );
 }
 
